* Fixed HTML definition lists not to be collapsed in class description or README
* Fixed javascript errors logged by collapser.js


git-svn-id: http://svn.gna.org/svn/etoile/trunk/Etoile@6895 7b3f36aa-e6db-49c1-8b4c-66eac1997e64

--- a/Developer/Services/DocGenerator/Templates/_includes/css/global.css
+++ b/Developer/Services/DocGenerator/Templates/_includes/css/global.css
@@ -524,21 +524,92 @@ pre
   color: #444;
 }
 
+#documentation dl
+{
+	margin: 0;
+	padding: 0;
+}
+
+#documentation dt
+{
+	margin: 0;
+	padding: 0;
+	font-weight: bold;
+}
+
 #documentation dd
+{
+	margin: 0 0 1em 0;
+	padding: 0;
+}
+
+/*#documentation dl
+{
+	float: left;
+	width: 520px;
+	margin: 1em 0;
+	padding: 0;
+	border-bottom: 1px solid #999;
+}
+
+#documentation dt
+{
+	clear: left;
+	float: left;
+	width: 200px;
+	margin: 0;
+	padding: 5px;
+	border-top: 1px solid #999;
+	font-weight: bold;
+}
+
+#documentation dd
+{
+	float: left;
+	width: 300px;
+	margin: 0;
+	padding: 5px;
+	border-top: 1px solid #999;
+}*/
+
+/*#documentation dl
+{
+	margin: 2em 0;
+	padding: 0;
+}
+
+#documentation dt
+{
+	position: relative;
+	left: 0;
+	top: 1.1em;
+	width: 5em;
+	font-weight: bold;
+}
+
+#documentation dd
+{
+	border-left: 1px solid #000;
+	margin: 0 0 0 6em;
+	padding: 0 0 .5em .5em;
+}*/
+
+#documentation .collapsable dd
 {
   display: none;
   margin: 0 18px 20px 18px;
 }
 
-#documentation dl
+#documentation .collapsable dl
 {
   margin-bottom: 10px;
 }
 
-#documentation dt
+#documentation .collapsable dt
 {
   color: #000;
   margin: 10px;
+  font-weight: normal;
 }
 
 #symbol dt
